--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mon-portfolio-projet-8",
+  "name": "projet-8",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,8 +13,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "sass": "^1.72.0"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
